--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,3 +1,5 @@
+//Import Break Points
+@import "layouts/_break-points";
 // Import box-sizing
 @import "generic/_box-sizing";
 // Import Normalize
@@ -6,5 +8,9 @@
 // Impiort Abstracts
 @import "abstracts/_abstracts";
 
+// Ipmort Elements
+@import "elements/_elements";
 // Import Base
 @import "base/_base";
+
+@import "layouts/_index";
