--- a/styles/base/components/_input-field.scss
+++ b/styles/base/components/_input-field.scss
@@ -16,12 +16,14 @@
     font-style: normal;
     font-weight: 400;
     font-size: 17px;
-    line-height: 29px;
+    height: 40px;
     padding: 3px 10px;
     border: solid;
     border-width: 1px;
     border-radius: 5px;
     border-color: $text-secondary;
+    width: 100%;
+
     &:focus {
       outline: none;
     }
