php second phase

--- a/public/styles/base/components/_components.scss
+++ b/public/styles/base/components/_components.scss
@@ -5,3 +5,5 @@
 @import "_image-holder";
 @import "_side-menu";
 @import "_color-pallete";
+@import "_main-banner";
+@import "_sidebar-menu-container";
