--- a/public/styles/layouts/_index.scss
+++ b/public/styles/layouts/_index.scss
@@ -1,2 +1,6 @@
 @import "_break-points";
-@import "layout-paddings";
+@import "_layout-paddings";
+@import "_flex";
+@import "_grid";
+@import "_margins";
+@import "_paddings";
