--- a/public/styles/elements/_texts.scss
+++ b/public/styles/elements/_texts.scss
@@ -44,3 +44,23 @@
 .bd-text-align-center {
   text-align: center;
 }
+
+.bd-title-main {
+  font-family: "SF Pro Text";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 64px;
+  line-height: 57px;
+  /* identical to box height, or 89% */
+  text-transform: capitalize;
+  color: $text-primary;
+}
+
+.bd-title-welcome {
+  color: $text-primary;
+  font-family: "SF Pro Text";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 57px;
+}
