--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -329,7 +329,7 @@ template {
   text-align: center;
   cursor: pointer;
   white-space: nowrap;
-  width: 100%;
+  width: auto;
 }
 .btn-tertiary:hover {
   border-color: var(--color-primary);
@@ -368,7 +368,7 @@ template {
   color: var(--color-primary);
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: start;
   font-family: "SF Pro Text";
   font-style: normal;
   font-weight: 400;
@@ -430,6 +430,17 @@ template {
   text-align: center;
 }
 
+.bd-title-main {
+  font-family: "SF Pro Text";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 64px;
+  line-height: 57px;
+  /* identical to box height, or 89% */
+  text-transform: capitalize;
+  color: var(--text-primary);
+}
+
 .bd-cat-select {
   border: none;
   font-family: "SF Pro Text";
@@ -450,6 +461,12 @@ template {
   content: " ";
   display: block;
   height: 1px;
+}
+
+.bd-gap-100 {
+  content: " ";
+  display: block;
+  height: 100px;
 }
 
 .bd-progressline {
@@ -748,6 +765,19 @@ template {
   background-color: black;
 }
 
+.bd-main-banner {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-image: url("public/images/main-banner.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 540px;
+  width: 100%;
+}
+
 @media (min-width: 768px) {
   .bd-wrapper {
     padding-left: 191px;
@@ -765,4 +795,36 @@ template {
     padding-left: 16px;
     padding-right: 16px;
   }
+}
+
+.bd-grid-50-width {
+  display: grid;
+  width: 100%;
+  grid-template-columns: repeat(2, 1fr);
+}
+.bd-grid-50-width_gap_column {
+  grid-column-gap: 50px;
+}
+.bd-grid-50-width_gap {
+  grid-gap: 24px;
+}
+
+.bd-m-r-10p {
+  margin-right: 10%;
+}
+
+.bd-m-l-10p {
+  margin-left: 10%;
+}
+
+.bd-m-t-30 {
+  margin-top: 30px;
+}
+
+.bd-m-b-30 {
+  margin-bottom: 30px;
+}
+
+.bd-p-t-10 {
+  padding-top: 10px;
 }/*# sourceMappingURL=index.css.map */
