php second phase

--- a/public/styles/base/components/_side-menu.scss
+++ b/public/styles/base/components/_side-menu.scss
@@ -9,11 +9,12 @@
   line-height: 24px;
   border-top: 1px solid $text-secondary;
   border-bottom: 1px solid $text-secondary;
-  padding: 5px 0;
+  padding: 16px 0;
   text-transform: uppercase;
   background-color: $bg-color;
 }
 .bd-side-menu-active {
   background-color: $color-primary !important;
   color: $text-tertiary;
+  width: 100%;
 }
