--- a/public/styles/elements/_gaps.scss
+++ b/public/styles/elements/_gaps.scss
@@ -8,3 +8,23 @@
   display: block;
   height: 100px;
 }
+.bd-gap-50 {
+  content: " ";
+  display: block;
+  height: 50px;
+}
+.bd-gap-60 {
+  content: " ";
+  display: block;
+  height: 60px;
+}
+.bd-gap-80 {
+  content: " ";
+  display: block;
+  height: 60px;
+}
+.bd-gap-24 {
+  content: " ";
+  display: block;
+  height: 24px;
+}
