--- a/public/styles/layouts/_grid.scss
+++ b/public/styles/layouts/_grid.scss
@@ -10,7 +10,7 @@
   }
 }
 
-.bd-grid-sidebar-right {
+.bd-grid-right-sidebar {
   display: grid;
   grid-template-columns: 3fr 1fr;
   grid-gap: $grid-24-gap;
