--- a/public/styles/elements/_texts.scss
+++ b/public/styles/elements/_texts.scss
@@ -44,6 +44,9 @@
 .bd-text-align-center {
   text-align: center;
 }
+.bd-text-align-start {
+  text-align: start;
+}
 
 .bd-title-main {
   font-family: "SF Pro Text";
