--- a/public/styles/base/components/_cat-item.scss
+++ b/public/styles/base/components/_cat-item.scss
@@ -8,7 +8,7 @@
   justify-content: center;
   align-items: center;
   gap: 10px;
-  padding: 15px;
+  padding: 30px 15px;
 }
 .bd-ratings {
   .bd-star-active {
