--- a/public/styles/elements/_progress-line.scss
+++ b/public/styles/elements/_progress-line.scss
@@ -1,4 +1,6 @@
 .bd-progressline {
+  margin-top: 24px;
+  margin-bottom: 24px;
   height: 50px;
   content: " ";
   border-bottom: dashed 1px $color_primary;
@@ -6,6 +8,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+
   .bd-progressline_circle {
     transform: translateY(50%);
     width: 48px;
@@ -29,4 +32,23 @@
       background-color: $color_primary;
     }
   }
+}
+
+.bd-progressText {
+  font-family: "SF Pro Text";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+
+  text-align: center;
+  text-transform: uppercase;
+  margin-top: 40px;
+  margin-bottom: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  color: $text-primary;
+  margin-left: -20px;
+  margin-right: -20px;
 }
